--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
   min-height: 100vh;
-  background: linear-gradient(#07b3ec, #654321);
+  background: linear-gradient(#07b3ec, #000000, #ffffff);
 }
 
 header {
@@ -64,6 +64,15 @@ section {
   justify-content: center;
   align-items: center;
 }
+section::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(to top, blue, transparent);
+}
+
 section img {
   position: absolute;
   top: 0;
@@ -94,4 +103,21 @@ section img#six_monkeys {
   font-size: 1.5em;
   z-index: 9;
   transform: translatey(100px);
+}
+
+.sec {
+  position: relative;
+  padding: 100px;
+  background: #1c0522;
+}
+
+.sec h2 {
+  font-size: 3.5em;
+  margin-bottom: 10px;
+  color: whitesmoke;
+}
+
+.sec p {
+  font-size: 1.1em;
+  color: whitesmoke;
 }
